navbar banner footer added

--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link  rel="icon" type="image/svg+xml" href="./public/Untitled design(1).png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>UCA Support</title>
+    <title>House Sell & Buy</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <script type="text/javascript">
+      (function () {
+        emailjs.init("DJ3zTCoZ1I5Ql0zHn");
+      })();
+    </script>
   </body>
 </html>
